[package]
name = "apple-bot"
version = "0.1.0"
authors = ["NonL4331 <nicholasl0003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.8"
tokio = {version = "1.10.0", features = ["full"]}
reqwest = "0.11.4"
select = "0.5.0"
regex = "1.5.4"
rand = "0.8.4"